Reorganiza estructura: separa enunciados (level-X) de soluciones (rendu3)

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,29 @@
 exam_progress/
 rendu/
 a.out
+*.out
 p
 .vscode/
 extra/progress/
+
+# Ejecutables compilados
+**/filter
+!**/filter/
+**/powerset
+!**/powerset/
+**/ft_scanf
+!**/ft_scanf/
+**/n_queens
+!**/n_queens/
+**/permutations
+!**/permutations/
+**/tsp
+!**/tsp/
+**/rip
+!**/rip/
+**/gnl_test
+**/gnl_original
+**/broken_gnl
+!**/broken_gnl/
+!**/broken_GNL/
 
